Fix ResultPrinter and minor improvements